--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <a href="">Главная</a>
                 <a href="">Каталог объектов</a>
                 <a href="">О компании</a>
-                <a href="">Контакты</a>
-                <a href="">Калькулятор ипотеки</a>
+                <a href="index3.html">Контакты</a>
+                <a href="index2.html">Калькулятор ипотеки</a>
             </nav>
             <button>
                 Задать вопрос
