--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
         <div>
             <a href="index.html">На главную</a>
             <br>
-            <a href="index.html">Про человека, который...</a>
+            <a href="index3.html">Про человека, который...</a>
             <h1>Ипотека 4,5% на весь срок</h1>
             <p>представьте, что ваша мечта об идеальном доме становится доступнее с выгодной ипотекой на камфортных
          условиях. Низкая ставка, максимум удобства и никаких сюрпризов1</p>
